--- a/FatedQuest.Libraries/GamePackage/packages.config
+++ b/FatedQuest.Libraries/GamePackage/packages.config
@@ -3,4 +3,5 @@
   <package id="rapidxml" version="1.13" targetFramework="native" />
   <package id="zlib_native" version="1.2.11" targetFramework="native" />
   <package id="zlib_native.redist" version="1.2.11" targetFramework="native" />
+  <package id="zlib_static" version="1.2.11.12" targetFramework="native" />
 </packages>
