--- a/SuperGameEngine/SuperGameEngine/packages.config
+++ b/SuperGameEngine/SuperGameEngine/packages.config
@@ -7,4 +7,5 @@
   <package id="sdl2_image.nuget.redist" version="2.8.2" targetFramework="native" />
   <package id="sdl2_mixer.nuget" version="2.8.0" targetFramework="native" />
   <package id="sdl2_mixer.nuget.redist" version="2.8.0" targetFramework="native" />
+  <package id="zlib_static" version="1.2.11.12" targetFramework="native" />
 </packages>
