--- a/FatedQuest.Libraries/StandardOperationsTests/StandardOperationsTests.vcxproj
+++ b/FatedQuest.Libraries/StandardOperationsTests/StandardOperationsTests.vcxproj
@@ -141,6 +141,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FileHandling\FileTests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Tools_Debug|Win32'">Create</PrecompiledHeader>
