--- a/FatedQuest.Libraries/GamePackage/GamePackage.vcxproj
+++ b/FatedQuest.Libraries/GamePackage/GamePackage.vcxproj
@@ -144,9 +144,13 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="GamePackage\CombinedGamePackage.h" />
     <ClInclude Include="GamePackage\GamePackage.h" />
+    <ClInclude Include="GamePackage\GamePackageFileSystem.h" />
+    <ClInclude Include="GamePackage\GamePackageFileSystemDirectory.h" />
+    <ClInclude Include="GamePackage\GamePackageFileSystemFile.h" />
     <ClInclude Include="GamePackage\PackageFile.h" />
     <ClInclude Include="GamePackage\PackageFileArchived.h" />
     <ClInclude Include="GamePackage\PackageFilePathing.h" />
+    <ClInclude Include="GamePackage\PackageFiles.h" />
     <ClInclude Include="GamePackage\PackageFileSystem.h" />
     <ClInclude Include="GamePackage\PackageFileSystemDirectory.h" />
     <ClInclude Include="GamePackage\PackageFileSystemFile.h" />
@@ -157,8 +161,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GamePackage\CombinedGamePackage.cpp" />
+    <ClCompile Include="GamePackage\GamePackageFileSystem.cpp" />
+    <ClCompile Include="GamePackage\GamePackageFileSystemDirectory.cpp" />
+    <ClCompile Include="GamePackage\GamePackageFileSystemFile.cpp" />
     <ClCompile Include="GamePackage\PackageFileArchived.cpp" />
     <ClCompile Include="GamePackage\PackageFilePathing.cpp" />
+    <ClCompile Include="GamePackage\PackageFiles.cpp" />
     <ClCompile Include="GamePackage\PackageFileUnarchived.cpp" />
     <ClCompile Include="GamePackage\SGEPackagePaths.cpp" />
     <ClCompile Include="pch.cpp">
