--- a/FatedQuest.Libraries/GamePackageTests/GamePackageTests.vcxproj.filters
+++ b/FatedQuest.Libraries/GamePackageTests/GamePackageTests.vcxproj.filters
@@ -11,6 +11,9 @@
     <ClCompile Include="GamePackage\GamePackageFileSystemDirectoryTests.cpp">
       <Filter>GamePackage</Filter>
     </ClCompile>
+    <ClCompile Include="GamePackage\GamePackageFileSystemTests.cpp">
+      <Filter>GamePackage</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
