--- a/FatedQuest.Libraries/GamePackage/GamePackage.vcxproj.filters
+++ b/FatedQuest.Libraries/GamePackage/GamePackage.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="Source Files\GamePackage">
       <UniqueIdentifier>{087b2b1f-0c01-420e-acb0-fa40703ed1dc}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\GamePackage\FileSystem">
+      <UniqueIdentifier>{b74b17e4-71df-4646-8f8b-e8b18982a073}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\GamePackage\FileSystem">
+      <UniqueIdentifier>{91ac7bed-12fb-4436-8fed-6ace69d79372}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -30,47 +36,53 @@
     <ClInclude Include="GamePackage\GamePackage.h">
       <Filter>Header Files\GamePackage</Filter>
     </ClInclude>
-    <ClInclude Include="GamePackage\PackageFile.h">
-      <Filter>Header Files\GamePackage</Filter>
-    </ClInclude>
-    <ClInclude Include="GamePackage\PackageFileSystem.h">
-      <Filter>Header Files\GamePackage</Filter>
-    </ClInclude>
-    <ClInclude Include="GamePackage\PackageFileSystemDirectory.h">
-      <Filter>Header Files\GamePackage</Filter>
-    </ClInclude>
-    <ClInclude Include="GamePackage\PackageFileSystemFile.h">
-      <Filter>Header Files\GamePackage</Filter>
-    </ClInclude>
-    <ClInclude Include="GamePackage\PackageFileUnarchived.h">
-      <Filter>Header Files\GamePackage</Filter>
-    </ClInclude>
-    <ClInclude Include="GamePackage\PackagePaths.h">
-      <Filter>Header Files\GamePackage</Filter>
-    </ClInclude>
     <ClInclude Include="GamePackage\SGEPackagePaths.h">
-      <Filter>Header Files\GamePackage</Filter>
-    </ClInclude>
-    <ClInclude Include="GamePackage\PackageFilePathing.h">
       <Filter>Header Files\GamePackage</Filter>
     </ClInclude>
     <ClInclude Include="GamePackage\CombinedGamePackage.h">
       <Filter>Header Files\GamePackage</Filter>
     </ClInclude>
+    <ClInclude Include="FatedQuestReferences.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GamePackage\PackageFileUnarchived.h">
+      <Filter>Header Files\GamePackage</Filter>
+    </ClInclude>
+    <ClInclude Include="GamePackage\PackageFilePathing.h">
+      <Filter>Header Files\GamePackage</Filter>
+    </ClInclude>
     <ClInclude Include="GamePackage\PackageFileArchived.h">
       <Filter>Header Files\GamePackage</Filter>
     </ClInclude>
-    <ClInclude Include="GamePackage\GamePackageFileSystem.h">
+    <ClInclude Include="GamePackage\PackagePaths.h">
       <Filter>Header Files\GamePackage</Filter>
     </ClInclude>
-    <ClInclude Include="GamePackage\GamePackageFileSystemFile.h">
+    <ClInclude Include="GamePackage\PackageFile.h">
       <Filter>Header Files\GamePackage</Filter>
     </ClInclude>
-    <ClInclude Include="GamePackage\PackageFiles.h">
+    <ClInclude Include="GamePackage\FileSystem\GamePackageFileSystem.h">
+      <Filter>Header Files\GamePackage\FileSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="GamePackage\FileSystem\GamePackageFileSystemDirectory.h">
+      <Filter>Header Files\GamePackage\FileSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="GamePackage\FileSystem\GamePackageFileSystemFile.h">
+      <Filter>Header Files\GamePackage\FileSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="GamePackage\FileSystem\PackageFileOrigin.h">
+      <Filter>Header Files\GamePackage\FileSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="GamePackage\FileSystem\PackageFileSystem.h">
+      <Filter>Header Files\GamePackage\FileSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="GamePackage\FileSystem\PackageFileSystemDirectory.h">
+      <Filter>Header Files\GamePackage\FileSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="GamePackage\FileSystem\PackageFileSystemFile.h">
+      <Filter>Header Files\GamePackage\FileSystem</Filter>
+    </ClInclude>
+    <ClInclude Include="GamePackage\FileSystem\PackageFiles.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GamePackage\GamePackageFileSystemDirectory.h">
-      <Filter>Header Files\GamePackage</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -92,17 +104,17 @@
     <ClCompile Include="GamePackage\PackageFileArchived.cpp">
       <Filter>Source Files\GamePackage</Filter>
     </ClCompile>
-    <ClCompile Include="GamePackage\PackageFiles.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="GamePackage\FileSystem\GamePackageFileSystem.cpp">
+      <Filter>Source Files\GamePackage\FileSystem</Filter>
     </ClCompile>
-    <ClCompile Include="GamePackage\GamePackageFileSystemFile.cpp">
-      <Filter>Source Files\GamePackage</Filter>
+    <ClCompile Include="GamePackage\FileSystem\GamePackageFileSystemDirectory.cpp">
+      <Filter>Source Files\GamePackage\FileSystem</Filter>
     </ClCompile>
-    <ClCompile Include="GamePackage\GamePackageFileSystem.cpp">
-      <Filter>Source Files\GamePackage</Filter>
+    <ClCompile Include="GamePackage\FileSystem\GamePackageFileSystemFile.cpp">
+      <Filter>Source Files\GamePackage\FileSystem</Filter>
     </ClCompile>
-    <ClCompile Include="GamePackage\GamePackageFileSystemDirectory.cpp">
-      <Filter>Source Files\GamePackage</Filter>
+    <ClCompile Include="GamePackage\FileSystem\PackageFiles.cpp">
+      <Filter>Source Files\GamePackage\FileSystem</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
