--- a/FatedQuest.Libraries/GamePackageTests/GamePackageTests.vcxproj
+++ b/FatedQuest.Libraries/GamePackageTests/GamePackageTests.vcxproj
@@ -114,6 +114,7 @@
   <ItemGroup>
     <ClCompile Include="GamePackage\GamePackageFileSystemDirectoryTests.cpp" />
     <ClCompile Include="GamePackage\GamePackageFileSystemFileTests.cpp" />
+    <ClCompile Include="GamePackage\GamePackageFileSystemTests.cpp" />
     <ClCompile Include="GamePackage\PackageFileUnarchivedTests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
