--- a/Tools/ProductsPackager/ProductsPackager/ProductsPackager.vcxproj
+++ b/Tools/ProductsPackager/ProductsPackager/ProductsPackager.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,6 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Packager.cpp" />
     <ClCompile Include="ProductsPackager.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +141,11 @@
     <ProjectReference Include="..\..\..\FatedQuest.Libraries\StandardOperations\StandardOperations.vcxproj">
       <Project>{1ae9e9be-b55d-4c31-8a6f-7f3220e8d538}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FatedQuestReferences.h" />
+    <ClInclude Include="PackageFileType.h" />
+    <ClInclude Include="Packager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
