Texture Manager now uses Game Package by default

--- a/FatedQuest.Libraries/GamePackage/GamePackage.vcxproj
+++ b/FatedQuest.Libraries/GamePackage/GamePackage.vcxproj
@@ -141,6 +141,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AllReferences.h" />
     <ClInclude Include="FatedQuestReferences.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GamePackage\CombinedGamePackage.h" />
