--- a/FatedQuest.Libraries/GamePackage/GamePackage.vcxproj.filters
+++ b/FatedQuest.Libraries/GamePackage/GamePackage.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="GamePackage\FileSystem\PackageFiles.h">
       <Filter>Header Files\GamePackage</Filter>
     </ClInclude>
+    <ClInclude Include="AllReferences.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
