Fixed an issue where the exe was counted as part of the products path
Also fixed and tested configuration for release distributions

--- a/FatedQuest.Libraries/BinaryOperations/BinaryOperations.vcxproj
+++ b/FatedQuest.Libraries/BinaryOperations/BinaryOperations.vcxproj
@@ -131,6 +131,8 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>
