--- a/FatedQuest.Libraries/GamePackageTests/GamePackageTests.vcxproj
+++ b/FatedQuest.Libraries/GamePackageTests/GamePackageTests.vcxproj
@@ -98,6 +98,8 @@
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
