Implemented ImGui Elements
Also upgraded to docking ImGui

--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -1,12 +1,147 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Hello, Dear ImGui with SDL2]
-Pos=54,135
-Size=247,48
+Pos=248,113
+Size=793,563
+Collapsed=0
+DockId=0x00000002,1
 
 [Window][My Window]
-Pos=310,25
+Pos=248,113
 Size=793,563
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Logger Output]
+Pos=248,113
+Size=793,563
+Collapsed=0
+DockId=0x00000002,2
+
+[Window][Dear ImGui Demo]
+Pos=248,113
+Size=793,563
+Collapsed=0
+DockId=0x00000002,1
+
+[Window][Delete?]
+Pos=434,312
+Size=311,105
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=435,274
+Size=409,172
+Collapsed=0
+
+[Window][Stacked 2]
+Pos=527,313
+Size=226,94
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=211,24
+Size=353,714
+Collapsed=0
+
+[Window][Dear ImGui ID Stack Tool]
+Pos=60,60
+Size=354,104
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=621,714
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,61
+Size=520,600
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=75,142
+Size=623,414
+Collapsed=0
+
+[Window][Example: Log]
+Pos=61,60
+Size=500,374
+Collapsed=0
+
+[Window][Hello, Dear ImGui with SDL2 22]
+Pos=248,113
+Size=793,563
+Collapsed=0
+DockId=0x00000002,2
+
+[Table][0x51D6F5EA,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xE102187A,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0xF1421304,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xE212E0F0,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x6655AF53,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=42
+Column 3  Weight=1.0000
+
+[Table][0x127BEAD2,7]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=112
+
+[Table][0x86C9FC97,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x95990F63,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=63
+
+[Table][0x20026E5F,1]
+Column 0  Weight=1.0000
+
+[Table][0x4ABA6AD9,1]
+Column 0  Weight=1.0000
+
+[Table][0x1A176BF7,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Docking][Data]
+DockNode  ID=0x00000002 Pos=248,113 Size=793,563 Selected=0x086A1005
 
