[#87] Added Icons for Tools

--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -4,26 +4,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, Dear ImGui with SDL2]
-Pos=212,90
-Size=793,563
+Pos=424,90
+Size=582,563
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000002,2
 
 [Window][My Window]
-Pos=212,90
-Size=793,563
+Pos=424,90
+Size=582,563
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Logger Output]
-Pos=212,90
-Size=793,563
+Pos=424,90
+Size=582,563
 Collapsed=0
-DockId=0x00000002,2
+DockId=0x00000002,3
 
 [Window][Dear ImGui Demo]
-Pos=248,113
-Size=793,563
+Pos=424,90
+Size=582,563
 Collapsed=0
 DockId=0x00000002,1
 
@@ -142,6 +142,15 @@ Column 0  Weight=1.0000
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
+[Table][0x951FCC8A,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=42
+Column 2  Width=73
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
 [Docking][Data]
-DockNode  ID=0x00000002 Pos=212,90 Size=793,563 Selected=0x086A1005
+DockNode  ID=0x00000002 Pos=424,90 Size=582,563 Selected=0x086A1005
 
